# macsanity

./: .gitignore  README.md  bajs.json  setup.cfg  setup.py
mac_formatter/: __init__.py  cli.py  mac_formatter.py
