[metadata]
name = mac-formatter
version = 0.3.3
author = thamuppet
description = A simple tool for formatting MAC addresses
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    wheel >= 0.37.1

zip_safe = True
include_package_data = True



